--- a/frontend/src/components/Sidebar/cssfiles/SidebarUngistered.css
+++ b/frontend/src/components/Sidebar/cssfiles/SidebarUngistered.css
@@ -13,9 +13,9 @@
   .av-sidebar {
     position: fixed;
     top: -3px;
-    left: 100px;            /* next to your 100px NavRail */
+    left: 110px;            /* next to your 100px NavRail */
     width: 368px;
-    height: 1122px;
+    height: 100vh;
     z-index: 90;
   
     border-radius: 19px;
@@ -64,7 +64,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2px 4px 10px 4px;
+    padding: 20px 4px 10px 4px;
   }
   
   .av-sidebar__title {
