--- a/frontend/src/components/Sidebar/cssfiles/SmartRec.css
+++ b/frontend/src/components/Sidebar/cssfiles/SmartRec.css
@@ -55,12 +55,13 @@
     height: calc(100% - 52px);
     padding-right: 4px;
     padding-left: 16px;
+    padding-top: 16px;
   }
   
   .sr-card{
     position: relative;
     width: 300px;
-    min-height: 136px;
+    min-height: 125px;
     border-radius: 30px;
     background: #0f0f0f;
     border: 0;
@@ -78,16 +79,33 @@
   .sr-copy{
     position: relative;
     z-index: 3;
-    padding: 5px 18px 16px;
+    padding: 0 18px 16px;
+    padding-top: 2px;
   }
+
+  /* Hover */
+.sr-card:hover:not(:disabled) {
+    border-color: #FF951C;
+    box-shadow: 0 0 14px #FF951C;
+    transform: translateY(-1px);
+  }
+  
+  /* Click (press) */
+  .sr-card:active:not(:disabled) {
+    border-color: #FF951C;
+    box-shadow: 0 0 18px #FF951C;
+    transform: scale(0.985);
+  }
+
   
   .sr-line{
     width: 280px;
     font-family:'ABeeZee', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     font-weight:400;
     font-size:16px;
-    line-height:17px;
+    line-height:25px;
     letter-spacing:0.02em;
+    margin: 0 0 12px 0;
     color:#fff;
     margin-bottom: 12px;
   }
@@ -100,19 +118,20 @@
   .sr-pill{
     box-sizing: border-box;
     width: 249px;
-    height: 24px;
+    height: 40px;
     border-radius: 30px;
     background: #2a2929;
     border: 1px solid #0f0f0f;
     display:flex;
     align-items:center;
-    padding: 0 12px;
+    padding: 12px 12px;
   }
+  
   
   .sr-pillText{
     font-family:'ABeeZee', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     font-weight:400;
-    font-size:11px;
+    font-size:15px;
     letter-spacing:0.02em;
     color:#fff;
     white-space: nowrap;
@@ -139,7 +158,7 @@
   .sr-glow[data-domain="Sports"]{ background: rgba(44,2,58,0.85); }
   .sr-glow[data-domain="Current Affairs"]{ background: rgba(70,2,50,0.85); }
   .sr-glow[data-domain="Science"]{ background: rgba(255,149,28,0.35); }
-  .sr-glow[data-domain="History"]{ background: rgba(120,80,30,0.45); }
+  .sr-glow[data-domain="History"]{ background: rgba(220, 85, 186, 0.45); }
   .sr-glow[data-domain="Geography & Travel"]{ background: rgba(20,90,60,0.45); }
   .sr-glow[data-domain="Art/Music/Literature"]{ background: rgba(110,40,130,0.45); }
   
